create update brand controller
